fix(Imports CSV): affichage des erreurs en multilignes (pre-wrap)

--- a/css/bo.css
+++ b/css/bo.css
@@ -279,3 +279,7 @@ span.description {
     table-layout: fixed;
     width: 100%;
 }
+
+.import-errors {
+    white-space: pre-wrap;
+}
